--- a/portal-empleo/src/app/navbar/navbar.component.scss
+++ b/portal-empleo/src/app/navbar/navbar.component.scss
@@ -1,7 +1,11 @@
-.title-portal{
-    text-align: left; 
-    font-family: Arial Black; 
-    font-size: 18px; 
-    color: #fff; 
-    text-shadow: 0 1px 0 #ddd, 0 2px 0 #ccc, 0 3px 0 #bbb, 0 4px 0 #aaa, 0 5px 0 #acacac, 0 6px 1px rgba(0,0,0,0.1), 0 0 5px rgba(0,0,0,0.1), 0 1px 3px rgba(0,0,0,0.3), 0 3px 5px rgba(0,0,0,0.2), 0 5px 10px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.2), 0 20px 20px rgba(0,0,0,0.15);
+.title-portal {
+    text-align: left;
+    font-family: Arial Black;
+    font-size: 18px;
+    background: #202020;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.4), 0px -1px 1px rgba(0, 0, 0, 0.3);
 }
