--- a/portal-empleo-frontend/src/app/main/main.component.html
+++ b/portal-empleo-frontend/src/app/main/main.component.html
@@ -33,8 +33,8 @@
                     <img src="../../assets/trabajador1.png" alt="empleado" />
                 </div>
                 <div class="portal-card__level portal-card__level--empleado">BUSCA TU EMPLEO IDEAL</div>
-                <div class="portal-card__unit-name">PAGINA PARA CANDIDATOS</div>
-                <div class="portal-card__unit-description">
+                <div class="portal-card__unit-name" (click)="onClick()">PAGINA PARA CANDIDATOS</div>
+                <div class="portal-card__unit-description" (click)="onClick()">
                     Bienvenido al portal de busqueda de empleo, aqui podras postularte para conseguir tu primer empleo
                     ademas de
                     multiples funciones!
