--- a/portal-empleo-frontend/src/app/login/login.component.scss
+++ b/portal-empleo-frontend/src/app/login/login.component.scss
@@ -42,6 +42,7 @@ body{
 }
 
 form{
+
 	width: 360px;
     margin-left: 155px;
 }
@@ -93,7 +94,7 @@ form{
     width:300px;
     height:300px;
     border-radius: 160px;
-    border:4px solid rgb(10, 142, 89);
+   // border:4px solid rgb(26, 194, 127);
     filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.7)); 
 }
 
@@ -165,6 +166,12 @@ img, video {
 
 .input-div.pass{
 	margin-bottom: 4px;
+}
+
+.validators{
+	padding-top: 50px;
+	font-weight: bold;
+	color: red;
 }
 
 a{
