--- a/portal-empleo-frontend/src/app/navbar/navbar.component.scss
+++ b/portal-empleo-frontend/src/app/navbar/navbar.component.scss
@@ -2,10 +2,12 @@
     text-align: left;
     font-family: Arial Black;
     font-size: 18px;
-    background: #202020;
+    background: #02411e;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     background-clip: text;
     color: transparent;
     text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.4), 0px -1px 1px rgba(0, 0, 0, 0.3);
+    font-weight: bold;
 }
+
