creacion del register ui, y validaciones angular

--- a/portal-empleo-frontend/src/app/register/register.component.html
+++ b/portal-empleo-frontend/src/app/register/register.component.html
@@ -1,1 +1,68 @@
-<p>register works!</p>
+<img class="wave" src="../../assets/wave.png">
+
+<div class="flex items-center min-h-screen">
+    <div class="flex-1 h-full max-w-4xl mx-auto bg-white rounded-lg shadow-2xl">
+        <div class="flex flex-col md:flex-row">
+            <div class="h-32 md:h-auto md:w-1/2">
+                <img class="object-cover w-full h-full" src="../../assets/Bienvenido a las oportunidades(1).png">
+            </div>
+            <div class="flex items-center justify-center p-6 sm:p-12 md:w-1/2">
+
+                <div class="w-full">
+                    <div class="flex justify-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" class="w-20 h-20 text-sky-700" fill="none"
+                            viewBox="0 0 24 24" stroke="currentColor">
+                            <path d="M12 14l9-5-9-5-9 5 9 5z" />
+                            <path
+                                d="M12 14l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14z" />
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                d="M12 14l9-5-9-5-9 5 9 5zm0 0l6.16-3.422a12.083 12.083 0 01.665 6.479A11.952 11.952 0 0012 20.055a11.952 11.952 0 00-6.824-2.998 12.078 12.078 0 01.665-6.479L12 14zm-4 6v-7.5l4-2.222" />
+                        </svg>
+                    </div>
+                    <h1 class="mb-4 text-2xl font-bold text-center text-gray-700 hover:text-teal-800">
+                        ⁃⁃⁃ Registrate ⁃⁃⁃
+                    </h1>
+                    <form (ngSubmit)="login()" [formGroup]="registerForm">
+                        <div class="mt-4">
+                            <label class="block text-sm">
+                                Email
+                            </label>
+                            <input type="email"
+                                class=" w-full px-4 py-2 text-sm border rounded-md focus:border-sky-700 focus:outline-none focus:ring-1 focus:ring-blue-600"
+                                placeholder="Escribe tu email" name="email" required formControlName="email"
+                                [email]="true">
+                            <div *ngIf="registerForm.get('email')?.touched && registerForm.get('email')?.errors?.['email']"
+                                class="validators">* Escribe un formato de correo valido *</div>
+                            <div *ngIf="registerForm.get('email')?.touched && registerForm.get('email')?.errors?.['required']"
+                                class="validators">* Email es requerido *</div>
+                        </div>
+                        <div>
+                            <label class="block mt-4 text-sm">
+                                Contraseña
+                            </label>
+                            <input
+                                class="w-full px-4 py-2 text-sm border rounded-md focus:border-sky-700 focus:outline-none focus:ring-1 focus:ring-blue-600"
+                                placeholder="Escribe tu contraseña" type="password" name="password" required
+                                formControlName="password">
+                            <div *ngIf="registerForm.get('password')?.touched && registerForm.get('password')?.errors?.['required']"
+                                class="validators">* contraseña es requerida *</div>
+                            <div *ngIf="registerForm.get('password')?.touched && registerForm.get('password')?.errors?.['minlength']"
+                                class="validators">* Minimo de caracteres permitidos 6 *</div>
+                        </div>
+                        <button
+                            class="block w-full px-4 py-2 mt-8 text-sm font-medium leading-5 text-center text-white transition-colors duration-150 bg-sky-700 border border-transparent rounded-lg active:bg-blue-600 hover:bg-teal-800 focus:outline-none focus:shadow-outline-blue"
+                            [disabled]="registerForm.invalid">
+                            Empieza ahora
+                        </button>
+
+                        <div class="mt-4 text-center">
+                            <p class="text-sm ">Ya tienes cuenta?, Logueate! <a href="/login"
+                                    class="text-blue-600 hover:underline">
+                                    Click aqui.</a></p>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
