--- a/portal-empleo-frontend/src/app/login/login.component.html
+++ b/portal-empleo-frontend/src/app/login/login.component.html
@@ -33,9 +33,9 @@
                         class="validators">* Minimo de caracteres permitidos 6 *</div>
                 </div>
             </div>
-                <a href="#" class="forgotpass">No tienes Cuenta, Registrate?</a>
-                <input type="submit" class="btn" [disabled]="loginForm.invalid" value="Iniciar Sesión">
-                <a href="#" class="forgotpass">Contraseña olvidada?</a>
+            <a href="/register" class="forgotpass" (click)="clickRegister()">No tienes Cuenta, Registrate?</a>
+            <input type="submit" class="btn" [disabled]="loginForm.invalid" value="Iniciar Sesión">
+            <a href="#" class="forgotpass">Contraseña olvidada?</a>
         </form>
     </div>
 </div>
