creando el lazy loading, unificando ruta, al app module

--- a/portal-empleo-frontend/src/app/main/main.component.html
+++ b/portal-empleo-frontend/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<div class="mainheader">
+<img src="../../assets/wave.png">
     <div class="container">
         <div class="wrapper">
             <div class="portal-card recluiter">
