--- a/portal-empleo-frontend/src/app/navbar/navbar.component.html
+++ b/portal-empleo-frontend/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-gray-800">
+<nav class="bg-teal-900">
     <div class="max-w-7xl mx-auto px-2 sm:px-6 lg:px-8">
       <div class="relative flex items-center justify-between h-16">
         <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
@@ -27,13 +27,13 @@
           <div class="hidden sm:block sm:ml-6">
             <div class="flex space-x-4">
               <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
-              <a href="/offers" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-medium" aria-current="page">Ofertas De Trabajo</a>
+              <a href="/offers" class="bg-gray-900 text-white px-3 py-2 rounded-md text-sm font-bold" aria-current="page">Ofertas De Trabajo</a>
   
-              <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Empresas</a>
+              <a href="#" class="text-slate-50 hover:bg-sky-800 hover:text-white px-3 py-2 rounded-md text-sm font-bold">Empresas</a>
   
-              <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Crea Tu Curriculum</a>
+              <a href="#" class="text-slate-50 hover:bg-sky-800 hover:text-white px-3 py-2 rounded-md text-sm font-bold">Crea Tu Curriculum</a>
   
-              <a href="#" class="text-gray-300 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-medium">Tus Postulaciones</a>
+              <a href="#" class="text-slate-50 hover:bg-gray-700 hover:text-white px-3 py-2 rounded-md text-sm font-bold">Tus Postulaciones</a>
             </div>
           </div>
         </div>
