--- a/portal-empleo-frontend/src/app/navbar/navbar.component.scss
+++ b/portal-empleo-frontend/src/app/navbar/navbar.component.scss
@@ -7,7 +7,10 @@
     -moz-background-clip: text;
     background-clip: text;
     color: transparent;
-    text-shadow: 0px 3px 3px rgba(255, 255, 255, 0.4), 0px -1px 1px rgba(0, 0, 0, 0.3);
     font-weight: bold;
+    margin-left: -25%;
 }
 
+element {
+    margin-left: -16%;
+  }
