--- a/portal-empleo-frontend/src/app/offers/offers.component.html
+++ b/portal-empleo-frontend/src/app/offers/offers.component.html
@@ -1,4 +1,3 @@
-
 <app-navbar></app-navbar>
 
 <main>
@@ -6,12 +5,18 @@
         <source src="../../assets/Untitled video ‐ Hecho con Clipchamp.mp4">
     </video>
     <div class="capa"></div>
-    
+
     <div class="content">
-    <h1 class="glass">"El trabajo que buscas, a tu alcance"</h1> 
-    <p class="text">Bienvenido al portal de empleo mas grande de todos, empieza ahora es gratis
-    </p>
-    <p class="text">Postulate a un sin fin de trabajos, busca tu empleo ideal, cambia tu vida, construye tu futuro</p>
-    <a>Explorar ahora</a>
-  </div>
+        <h1 class="glass">"El trabajo que buscas, a tu alcance"</h1> </div>
+        <p class="text">Bienvenido al portal de empleo mas grande de todos, empieza ahora es gratis
+        </p>
+        <p class="text">Postulate a un sin fin de trabajos, busca tu empleo ideal, cambia tu vida, construye tu futuro
+        </p>
+        <div class="center">
+        <a class="button">Explorar ahora</a></div>
+  
 </main>
+<br>
+<div>
+    <h1>hola mundo[[[</h1>
+</div>
