--- a/portal-empleo-frontend/src/app/offers/offers.component.scss
+++ b/portal-empleo-frontend/src/app/offers/offers.component.scss
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@1,500&family=Roboto:wght@100&display=swap');
+
 
 video {
     position: absolute;
     top: 5;
     left: 0;
     width: 100%;
-    height: 75%;
+    height: 70%;
     object-fit: cover;
     z-index: -1;
     opacity: 0.8;
@@ -16,9 +18,9 @@ video {
     top: 9;
     left: 0;
     width: 100%;
-    height: 75%;
+    height: 70%;
     background-color: black;
-    opacity: 0.3;
+    opacity: 0.5;
     mix-blend-mode: overlay;
     background-image: radial-gradient(rgb(54, 54, 240), rgb(109, 41, 198), rgb(71, 0, 77) )
     
@@ -34,17 +36,17 @@ video {
     margin: 0 auto;
     text-align: center;
     font-family: 'Bebas Neue';
+    text-shadow: #474747 3px 5px 2px;
+    
+
 }
 
-.content h1 {
-    font-size: 80px;
-    color: #fff;
-    font-weight: 400;
-}
 
-.content a {
+
+.button {
     text-decoration: none;
     display: inline-block;
+    margin-top: 55px;
     color: #fff;
     font-size: 24px;
     border: 4px solid white;
@@ -52,12 +54,21 @@ video {
     border-radius: 50px;
     background-color: rgba(33, 32, 32, 0.06);
     backdrop-filter: blur;
-
+    font-family: 'Bebas Neue';   
 }
 
 .text{
     text-align: center;
-    font-size: 21px;
+    font-size: 22px;
+    font-family: 'Playfair Display', serif;
+    text-decoration: none;
+    font-weight: bold;
+    color: #FFF;
+    margin: 0 auto;
+    text-align: center;
+    scroll-behavior: smooth;
+    text-shadow: #474747 2px 4px 2px;
+
 }
 
 .glass{
@@ -68,4 +79,11 @@ video {
     border-radius: 15px;
     backdrop-filter: blur;
     margin-top: -20px;
+    font-size: 80px;
+    color: #fff;
+    font-weight: 400;
+}
+
+.center{
+    text-align: center;
 }
