maketacion del html, scss, modificacion de html.

--- a/portal-empleo-frontend/src/app/navbar/navbar.component.scss
+++ b/portal-empleo-frontend/src/app/navbar/navbar.component.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+
+
 .title-portal {
     text-align: left;
     font-family: Arial Black;
@@ -9,6 +12,8 @@
     color: transparent;
     font-weight: bold;
     margin-left: -25%;
+    font-family: 'Dancing Script', cursive;
+    letter-spacing: 0.22em
 }
 
 element {
