--- a/portal-empleo-frontend/src/app/offers/offers.component.html
+++ b/portal-empleo-frontend/src/app/offers/offers.component.html
@@ -217,10 +217,10 @@
     <div class="main-container">
       <div class="search-type">
         <div class="alert">
-          <div class="alert-title">Create Job Alert</div>
-          <div class="alert-subtitle">Create a job alert now and never miss a job</div>
-          <input type="text" placeholder="Enter job keyword">
-          <button class="search-buttons">Create Job Alerts</button>
+          <div class="alert-title">Crear una alerta para trabajo</div>
+          <div class="alert-subtitle">crea una oferta para no perderte ninguno</div>
+          <input type="text" placeholder="Ingresa tu correo">
+          <button class="search-buttons">Suscribirme</button>
         </div>
         <div class="job-time">
           <div class="job-time-title">Type of Employment</div>
@@ -228,32 +228,32 @@
             <div class="type-container">
               <input type="checkbox" id="job1" class="job-style" checked>
               <label for="job1">Full Time Jobs</label>
-              <span class="job-number">56</span>
+              
             </div>
             <div class="type-container">
               <input type="checkbox" id="job2" class="job-style">
               <label for="job2">Part Time Jobs</label>
-              <span class="job-number">43</span>
+              
             </div>
             <div class="type-container">
               <input type="checkbox" id="job3" class="job-style">
               <label for="job3">Remote Jobs</label>
-              <span class="job-number">24</span>
+             
             </div>
             <div class="type-container">
               <input type="checkbox" id="job4" class="job-style">
               <label for="job4">Internship Jobs</label>
-              <span class="job-number">27</span>
+             
             </div>
             <div class="type-container">
               <input type="checkbox" id="job5" class="job-style">
               <label for="job5">Contract</label>
-              <span class="job-number">76</span>
+              
             </div>
             <div class="type-container">
               <input type="checkbox" id="job6" class="job-style">
               <label for="job6">Training Jobs</label>
-              <span class="job-number">28</span>
+              
             </div>
           </div>
         </div>
@@ -263,32 +263,32 @@
             <div class="type-container">
               <input type="checkbox" id="job7" class="job-style">
               <label for="job7">Student Level</label>
-              <span class="job-number">98</span>
+            
             </div>
             <div class="type-container">
               <input type="checkbox" id="job8" class="job-style">
               <label for="job8">Entry Level</label>
-              <span class="job-number">44</span>
+              
             </div>
             <div class="type-container">
               <input type="checkbox" id="job9" class="job-style" checked>
               <label for="job9">Mid Level</label>
-              <span class="job-number">35</span>
+            
             </div>
             <div class="type-container">
               <input type="checkbox" id="job10" class="job-style" checked>
               <label for="job10">Senior Level</label>
-              <span class="job-number">29</span>
+              
             </div>
             <div class="type-container">
               <input type="checkbox" id="job11" class="job-style">
               <label for="job11">Directors</label>
-              <span class="job-number">26</span>
+             
             </div>
             <div class="type-container">
               <input type="checkbox" id="job12" class="job-style">
               <label for="job12">VP or Above</label>
-              <span class="job-number">56</span>
+              
             </div>
           </div>
         </div>
@@ -298,37 +298,37 @@
             <div class="type-container">
               <input type="checkbox" id="job1" class="job-style">
               <label for="job1">$700 - $1000</label>
-              <span class="job-number">49</span>
+             
             </div>
             <div class="type-container">
               <input type="checkbox" id="job2" class="job-style">
               <label for="job2">$1000 - $1200</label>
-              <span class="job-number">67</span>
+              >
             </div>
             <div class="type-container">
               <input type="checkbox" id="job3" class="job-style">
               <label for="job3">$1200 - $1400</label>
-              <span class="job-number">24</span>
+            
             </div>
             <div class="type-container">
               <input type="checkbox" id="job4" class="job-style">
               <label for="job4">$1500 - $1800</label>
-              <span class="job-number">27</span>
+             
             </div>
             <div class="type-container">
               <input type="checkbox" id="job5" class="job-style" checked>
               <label for="job5">$2000 - $3000</label>
-              <span class="job-number">76</span>
+              
             </div>
             <div class="type-container">
               <input type="checkbox" id="job6" class="job-style" checked>
               <label for="job6">$3000 - $4000</label>
-              <span class="job-number">22</span>
+            
             </div>
             <div class="type-container">
               <input type="checkbox" id="job6" class="job-style">
               <label for="job6">$4000 - $5000</label>
-              <span class="job-number">18</span>
+            
             </div>
           </div>
         </div>
@@ -928,3 +928,4 @@
     </div>
   </div>
 </div>
+
