--- a/portal-empleo-frontend/src/app/offers/offers.component.scss
+++ b/portal-empleo-frontend/src/app/offers/offers.component.scss
@@ -5,6 +5,28 @@
   box-sizing: border-box;
 }
 
+:root {
+  --body-bg-color: #e5ecef;
+  --theme-bg-color: #fafafb;
+  --body-font: "Poppins", sans-serif;
+  --body-color: #2f2f33;
+  --active-color: #0162ff;
+  --active-light-color: #e1ebfb;
+  --header-bg-color: #fff;
+  --search-border-color: #efefef;
+  --border-color: #d8d8d8;
+  --alert-bg-color: #e8f2ff;
+  --subtitle-color: #83838e;
+  --inactive-color: #f0f0f0;
+  --placeholder-color: #9b9ba5;
+  --time-button: #fc5757;
+  --level-button: #5052d5;
+  --button-color: #fff;
+}
+
+
+
+
 .bg-sky-900{
   opacity: 0.7;
 }
@@ -47,29 +69,29 @@ img {
 
 
 body {
-  background-color: var(--body-bg-color);
-  font-family: var(--body-font);
+  background-color: #e5ecef;
+  font-family: "Poppins", sans-serif;
   font-size: 15px;
-  color: var(--body-color);
+  color: #2f2f33;
 }
 
 
   .search.item {
-    color: var(--body-color);
-    border-color: var(--body-color);
+    color: #2f2f33;
+    border-color:#2f2f33;
   }
 
   .search-location,
   .search-job,
   .search-salary {
     svg {
-      color: var(--body-color);
+      color: #2f2f33;
     }
   }
 
   .detail-button {
-    background-color: var(--inactive-color);
-    color: var(--subtitle-color);
+    background-color: #f0f0f0;
+    color: #83838e;
   }
 
 
@@ -80,7 +102,7 @@ body {
   height: 100vh;
   margin: 0 auto;
   overflow: hidden;
-  background-color: var(--theme-bg-color);
+  background-color: #f0f0f0;
 }
 
 .logo {
@@ -96,37 +118,6 @@ body {
   }
 }
 
-.header {
-  display: flex;
-  align-items: center;
-  transition: box-shadow 0.3s;
-  flex-shrink: 0;
-  padding: 0 40px;
-  white-space: nowrap;
-  background-color: var(--header-bg-color);
-  height: 60px;
-  width: 100%;
-  font-size: 14px;
-  justify-content: space-between;
-
-  &-menu a {
-    text-decoration: none;
-    color: var(--body-color);
-    font-weight: 500;
-
-    &:hover {
-      color: var(--active-color);
-    }
-
-    &:not(:first-child) {
-      margin-left: 30px;
-    }
-
-    &.active {
-      color: var(--active-color);
-    }
-  }
-}
 
 .user-settings {
   display: flex;
@@ -151,10 +142,10 @@ body {
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    border: 2px solid var(--header-bg-color);
+    border: 2px solid #fff;
     right: 6px;
     top: -1px;
-    background-color: var(--active-color);
+    background-color: #0162ff;
   }
 }
 
@@ -182,13 +173,13 @@ body {
   display: flex;
   flex-shrink: 0;
   align-items: center;
-  background-color: var(--header-bg-color);
+  background-color: white;
   border-radius: 8px;
   width: 100%;
   padding-left: 20px;
 
   div:not(:last-of-type) {
-    border-right: 1px solid var(--search-border-color);
+    border-right: 3px solid #efefef;
   }
 }
 
@@ -233,20 +224,20 @@ body {
   svg {
     margin-right: 8px;
     width: 18px;
-    color: var(--active-color);
+    color: #0162ff;
     flex-shrink: 0;
   }
 }
 
 .search-button {
-  background-color: var(--active-color);
+  background-color: rgb(88, 88, 235);
   height: 55px;
   border: none;
   font-weight: 600;
   font-size: 14px;
   padding: 0 15px;
   border-radius: 0 8px 8px 0;
-  color: var(--button-color);
+  color: white;
   cursor: pointer;
   margin-left: auto;
 }
@@ -256,8 +247,8 @@ body {
   top: 10px;
   left: 25px;
   font-size: 13px;
-  color: var(--active-color);
-  border: 1px solid var(--search-border-color);
+  color: #0162ff;
+  border: 1px solid #efefef;
   padding: 8px 10px;
   border-radius: 8px;
   display: flex;
@@ -288,7 +279,7 @@ body {
 }
 
 .alert {
-  background-color: var(--alert-bg-color);
+  background-color: #e8f2ff;
   padding: 24px 18px;
   border-radius: 8px;
 
@@ -300,7 +291,7 @@ body {
 
   &-subtitle {
     font-size: 13px;
-    color: var(--subtitle-color);
+    color: #83838e;
     line-height: 1.6em;
     margin-bottom: 20px;
   }
@@ -310,7 +301,7 @@ body {
     padding: 10px;
     display: block;
     border-radius: 6px;
-    background-color: var(--header-bg-color);
+    background-color: #fff;
     border: none;
     font-size: 13px;
   }
@@ -318,8 +309,8 @@ body {
 
 .search-buttons {
   border: none;
-  color: var(--button-color);
-  background-color: var(--active-color);
+  color: #fff;
+  background-color: #0162ff;
   padding: 8px 10px;
   border-radius: 6px;
   font-size: 13px;
@@ -337,14 +328,15 @@ body {
   &-title {
     font-size: 14px;
     font-weight: 500;
+    font-weight: bold;
   }
 }
 
 .type-container {
   display: flex;
   align-items: center;
-  color: var(--subtitle-color);
-  font-size: 13px;
+  color: #83838e;
+  font-size: 15px;
 
   label {
     margin-left: 2px;
@@ -358,16 +350,6 @@ body {
   }
 }
 
-.job-number {
-  margin-left: auto;
-  background-color: var(--inactive-color);
-  color: var(--subtitle-color);
-  font-size: 10px;
-  font-weight: 500;
-  padding: 5px;
-  border-radius: 4px;
-}
-
 .job-style {
   display: none;
 }
@@ -377,14 +359,16 @@ body {
   margin-right: 10px;
   width: 16px;
   height: 16px;
-  border: 1px solid var(--subtitle-color);
+  border: 2px solid #83838e;
+  background-color: white;
   border-radius: 4px;
   cursor: pointer;
+  
 }
 
 .job-style:checked+label:before {
-  background-color: var(--active-color);
-  border-color: var(--active-color);
+  background-color: #0162ff;
+  border-color: #0162ff;
   background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%23fff' stroke-width='3' stroke-linecap='round' stroke-linejoin='round' class='feather feather-check'%3e%3cpath d='M20 6L9 17l-5-5'/%3e%3c/svg%3e");
   background-position: 50%;
   background-size: 14px;
@@ -392,8 +376,8 @@ body {
 }
 
 .job-style:checked+label+span {
-  background-color: var(--active-light-color);
-  color: var(--active-color);
+  background-color: #e1ebfb;
+  color: #0162ff;
 }
 
 .searched-jobs {
@@ -425,16 +409,16 @@ body {
 
   &-sort {
     font-size: 14px;
-    color: var(--subtitle-color);
+    color: #83838e;
 
     .post-time {
       font-weight: 600;
-      color: var(--subtitle-color);
+      color: #83838e;
     }
 
     .menu-icon {
       font-size: 9px;
-      color: var(--placeholder-color);
+      color: #9b9ba5;
       margin-left: 6px;
     }
   }
@@ -460,7 +444,7 @@ body {
 
 .job-card {
   padding: 20px 16px;
-  background-color: var(--header-bg-color);
+  background-color: #fff;
   border-radius: 8px;
   cursor: pointer;
   transition: .2s;
@@ -482,7 +466,7 @@ body {
   }
 
   &-subtitle {
-    color: var(--subtitle-color);
+    color: #83838e;
     font-size: 13px;
     margin-top: 14px;
     line-height: 1.6em;
@@ -532,8 +516,8 @@ body {
 }
 
 .detail-button {
-  background-color: var(--active-light-color);
-  color: var(--active-color);
+  background-color: #e1ebfb;
+  color: #0162ff;
   font-size: 11px;
   font-weight: 500;
   padding: 6px 8px;
@@ -564,15 +548,15 @@ body {
   margin-right: 12px;
 
   &-msg {
-    background-color: var(--inactive-color);
-    color: var(--subtitle-color);
+    background-color: #f0f0f0;
+    color: #83838e;
   }
 }
 
 .menu-dot {
-  background-color: var(--placeholder-color);
-  box-shadow: -6px 0 0 0 var(--placeholder-color),
-    6px 0 0 0 var(--placeholder-color);
+  background-color: #9b9ba5;
+  box-shadow: -6px 0 0 0 #9b9ba5,
+    6px 0 0 0 #9b9ba5;
   width: 4px;
   height: 4px;
   border: 0;
@@ -618,31 +602,31 @@ body {
     margin-top: 12px;
 
     .search-buttons {
-      background-color: var(--inactive-color);
+      background-color: #f0f0f0;
       font-size: 11px;
       padding: 6px 8px;
       margin-top: 0;
       font-weight: 500;
 
       &.time-button {
-        color: var(--time-button);
+        color: #fc5757;
         margin-right: 8px;
       }
 
       &.level-button {
-        color: var(--level-button);
+        color: #5052d5;
       }
     }
 
     .job-stat {
-      color: var(--active-color);
+      color: #0162ff;
       font-size: 12px;
       font-weight: 500;
       margin-left: auto;
     }
 
     .job-day {
-      color: var(--subtitle-color);
+      color: #83838e;
       font-size: 12px;
       margin-left: 8px;
       font-weight: 500;
@@ -663,8 +647,8 @@ body {
       box-shadow: none;
       width: 24px;
       padding: 4px;
-      color: var(--subtitle-color);
-      border: 1px solid var(--border-color);
+      color: #83838e;
+      border: 1px solid #d8d8d8;
       margin-left: auto;
       margin-bottom: auto;
     }
@@ -685,7 +669,7 @@ body {
 }
 
 .job-explain {
-  background-color: var(--header-bg-color);
+  background-color: #fff;
   margin-left: 40px;
   border-radius: 0 0 8px 8px;
 }
@@ -710,7 +694,7 @@ body {
     padding: 12px;
     background-color: #fff;
     border-radius: 10px;
-    border: 4px solid var(--header-bg-color);
+    border: 4px solid #fff;
   }
 }
 
@@ -732,8 +716,8 @@ body {
 
   svg {
     width: 32px;
-    border: 1px solid var(--border-color);
-    color: var(--subtitle-color);
+    border: 1px solid #d8d8d8;
+    color: #83838e;
     border-radius: 8px;
     padding: 6px;
 
@@ -757,14 +741,14 @@ body {
   }
 
   .company-name {
-    color: var(--active-color);
+    color: #0162ff;
     font-weight: 600;
     font-size: 14px;
   }
 
   .comp-location,
   .posted {
-    color: var(--subtitle-color);
+    color: #83838e;
     font-size: 12px;
     font-weight: 500;
   }
@@ -778,7 +762,7 @@ body {
       width: 3px;
       height: 3px;
       border-radius: 50%;
-      background-color: var(--placeholder-color);
+      background-color: #9b9ba5;
       top: 49%;
       left: -8px;
       position: absolute;
@@ -786,7 +770,7 @@ body {
   }
 
   .app-number {
-    color: var(--body-color);
+    color: #e5ecef;
     position: relative;
     margin-left: 12px;
 
@@ -795,7 +779,7 @@ body {
       width: 3px;
       height: 3px;
       border-radius: 50%;
-      background-color: var(--placeholder-color);
+      background-color: #9b9ba5;
       top: 50%;
       left: -7px;
       position: absolute;
@@ -806,7 +790,7 @@ body {
 .explain {
   &-bar {
     margin-top: 20px;
-    border: 1px solid var(--border-color);
+    border: 1px solid #d8d8d8;
     border-radius: 8px;
     display: flex;
     height: 66px;
@@ -816,7 +800,7 @@ body {
   }
 
   &-title {
-    color: var(--subtitle-color);
+    color: #83838e;
     font-size: 12px;
     line-height: 40px;
     white-space: nowrap;
@@ -833,7 +817,7 @@ body {
     height: 66px;
 
     &+& {
-      border-left: 1px solid var(--border-color);
+      border-left: 1px solid #d8d8d8;
       padding-left: 16px;
     }
   }
@@ -917,7 +901,7 @@ body {
 
   .explain-contents:nth-child(2)~.explain-contents {
     margin-top: 16px;
-    border-top: 1px solid var(--border-color);
+    border-top: 1px solid #d8d8d8;
   }
 
   .job-subtitle-wrapper {
